<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="#FF050370"
    android:padding="20dp">

    <ImageView
        android:src="@drawable/ic_launcher_foreground"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/todo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/la_currency"
        android:textColor="#FFffffff"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:id="@+id/name_ID"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_ID"
        android:textColor="#FFffffff"
        android:textSize="14sp"
        android:text="@string/e_mail"
        />

</LinearLayout>