<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <pl.utkala.searchablespinner.SearchableSpinner
            android:id="@+id/toCurr"
            android:layout_width="98dp"
            android:layout_height="53dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:prompt="@string/to_currency"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toTopOf="@+id/enterAmt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toText"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="SpeakableTextPresentCheck" />

        <pl.utkala.searchablespinner.SearchableSpinner
            android:id="@+id/fromCurr"
            android:layout_width="98dp"
            android:layout_height="53dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:prompt="@string/from_currency"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toTopOf="@+id/enterAmt"
            app:layout_constraintEnd_toStartOf="@+id/toText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="287dp"
            android:layout_height="169dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.468"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/enterAmt"
            android:layout_width="216dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="#7F96CA"
            android:ems="10"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColorHint="#212121"
            app:layout_constraintBottom_toTopOf="@+id/convertBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.726" />

        <Button
            android:id="@+id/convertBtn"
            android:layout_width="219dp"
            android:layout_height="78dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/convert"
            android:textColor="#616161"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.944" />

        <TextView
            android:id="@+id/toText"
            android:layout_width="69dp"
            android:layout_height="53dp"
            android:text="@string/to"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/enterAmt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="TextSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/navigation_pane"/>

</androidx.drawerlayout.widget.DrawerLayout>